--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                           </ul>
                         </li>
                       </ol>
-                      <img src="img/mem-cond/trylock.PNG" alt="Errore">
+                      <img src="img/mem-cond/trylock.png" alt="Errore">
                     </div>
                   </div>
                 </div>  
