--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                   <h3>NESSUN CICLO, NESSUN DEADLOCK</h3>
                 </div>
                 <div class="img-2">
-                  <img src="img/mem-cond/es-2.png" alt="Errore">
+                  <img src="img/mem-cond/es-2.PNG" alt="Errore">
                   <h3>CICLO E DEADLOCK</h3>
                 </div>
                 <div class="img-3">
