fixed a image in send-receive

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
             </div>
             <div class="es-mes-2">
               <h3>Esempio 2</h3>
-              <p>Iniziamo inviando un messaggio vuoto all'interno della Mailbox.</p>
+              <p>Iniziamo inviando un messaggio vuoto all'interno della Mailbox. nota: in send e receive, consumatore e produttore devono essere sostituiti da mailbox.</p>
               <div class="es-mes-2-content">
                 <ol>
                   <li>P0 arriva alla sua Receive.</li>
