fixed mailbox example

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                   <li>Il produttore rimane nella Send fino a quando non riceve la ricevuta.</li>
                   <li>Il produttore rimane nella Send fino a quando non riceve la ricevuta.</li>
                 </ol>
-                <img src="img/mem-cond/messaggi-1.PNG" alt="Errore">
+                <img src="img/mem-cond/messaggio-2.PNG" alt="Errore">
               </div>
             </div>
           </div>
